2012-05-04  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor Y10k bug.
	* nnweb.el (nnweb-google-parse-1): Don't assume years have 4 digits.

2012-05-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-open-connection-1): Don't leave an "opening..."
	message once it's actually open.

2012-05-01  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Ma Gnus v0.5 is released.

2012-04-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* auth-source.el (auth-source--aput-1, auth-source--aput)
	(auth-source--aget): New functions and macros.
	Use them instead of aput/aget.

2012-04-27  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus.el (debbugs-gnu): Don't override existing autoload definition.

2012-04-26  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el (plstore-called-interactively-p): New compat macro copied
	from message.el.
	(plstore-mode): Use it.

2012-04-26  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el: Revive the editing feature.
	(plstore-mode): New mode to edit plstore file.
	(plstore-mode-toggle-display, plstore-mode-original)
	(plstore-mode-decoded): New command.
	(plstore--encode, plstore--decode, plstore--write-contents-functions)
	(plstore--insert-buffer, plstore--make): New function.
	(plstore-open, plstore-save): Simplify by using them.

2012-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pop3.el (pop3-wait-for-messages): Fix retrieved data size calculation.

2012-04-19  Juanma Barranquero  <lekktu@gmail.com>

	* tls.el (open-tls-stream): Remove unused binding.

2012-04-16  Glenn Morris  <rgm@gnu.org>

	* nndraft.el (nndraft-request-list): Fix declaration.

2012-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-dissect-buffer): Doc fix.

	* gnus-msg.el (gnus-inews-insert-gcc): Don't do the alist stuff when we
	don't have a current group.

	* gnus-sum.el (gnus-handle-ephemeral-exit): Avoid creating the group
	buffer if it doesn't exist.

	* gnus-group.el (gnus-group-read-ephemeral-group): If no quit-config is